--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/styled-engine-sc": "^7.0.2",
+    "@reduxjs/toolkit": "^2.6.1",
     "jest": "^29.7.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
