--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.2",
     "styled-components": "^6.1.17",
     "zod": "^3.24.3"
   },
