--- a/package.json
+++ b/package.json
@@ -16,21 +16,19 @@
     "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
-    "@mui/styled-engine-sc": "^7.0.2",
+    "@mui/styled-engine": "^7.0.2",
     "@reduxjs/toolkit": "^2.6.1",
     "jest": "^29.7.0",
     "react": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
-    "styled-components": "^6.1.17",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
